// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should render checked state 1`] = `
<div
  class="css-v3lvlk-switch denali-switch"
  data-testid="switch-wrapper"
>
  <input
    checked=""
    id="switch-test-switch"
    name="test-switch"
    type="checkbox"
    value="1"
  />
  <label
    for="switch-test-switch"
  >
    <div
      class="label-content"
    >
      test-label
    </div>
  </label>
</div>
`;

exports[`Switch should render unchecked state 1`] = `
<div
  class="css-v3lvlk-switch denali-switch"
  data-testid="switch-wrapper"
>
  <input
    id="switch-test-switch"
    name="test-switch"
    type="checkbox"
    value="1"
  />
  <label
    for="switch-test-switch"
  >
    <div
      class="label-content"
    >
      test-label
    </div>
  </label>
</div>
`;
